--- a/page-structure.html
+++ b/page-structure.html
@@ -2,24 +2,29 @@
 
 <html>
     <head>
+        <!-- CSS files -->
         <link href="styles/style.css" rel="stylesheet">
+        <link href="styles/decklists-styles.css" rel="stylesheet">
     </head>
     <body>
         <!-- Title header -->
-        <header class="title">
-            The Great Revel
-        </header>
-        <!-- Content -->
-        <div id="not-header">
+        <header class="title">The Great Revel</header>
+
+        <!-- Rest of the Page -->
+        <div class="not-header">
+            <!-- Navigation Bar -->
             <nav class="nav-bar">
                 <ul class="nav-bar-list" id="nav-bar-list">
                     <!-- Navigation links are put here by nav-links.js -->
                 </ul>
             </nav>
+
+            <!-- Content -->
             <div class="content">
-                
+
             </div>
         </div>
-    <script src="scripts/page-structure.js"></script>
+    <script src="scripts/nav-links.js"></script>
+    <script src="scripts/decklist-card-viewer.js"></script>
     </body>
 </html>
