--- a/index.html
+++ b/index.html
@@ -21,24 +21,28 @@
             <!-- Content -->
             <div class="content">
                 <h1 class="page-title">Home</h1>
-                <p>Welcome to the Great Revel. I'm Bosseidon, and I created this page
-                    in order to share all my Modern Burn knowledge.</p>
+                <p>Welcome to the Great Revel. I'm Bosseidon, a dude that plays Magic: The Gathering. I'm particularly fond of the Modern format, with Burn being my deck of choice. I like it so much that I decided to create all of this content as an outlet for my thoughts about it.</p>
+                <p>I have a podcast, also entitled "The Great Revel", which is uploaded to my Youtube channel. I know Youtube is not the best place to have it on, but setting it up with other services ain't free, and pretty cardboard costs money. I also stream semi-regularly on Twitch, which really means like once or twice a week depending if I'm too busy with work and/or college.</p>
+                <p>There's also a Discord for Red based aggro decks, with channels for every format, which I'm a part of, and am quite active there. Feel free to join if these strategies interest you, or if you have any questions you want answering.</p>
 
-                <h2>Twitch<a class="social-link" href="https://www.twitch.tv/bosseidonred" target="_blank">
-                    <img class="link-image" src="images/twitch-icon.png"></a></h2>
-                <p>I regularly stream Magic: The Gathering Online on Twitch, where I try my best
-                    to explain everyone of my ingame decisions.</p>
-                
-                <h2>Youtube<a class="social-link" href="https://www.youtube.com/channel/UCyeMyVHflupyMPKDZoN6IIw" target="_blank">
-                    <img class="link-image" src="images/youtube-icon.png"></a></h2>
-                <p>After I stream, I upload all my VOD's to youtube, to permanently save them
-                    for future viewing.</p>
-
-                <h2>Twitter<a class="social-link" href="https://twitter.com/BosseidonRed" target="_blank">
-                    <img class="link-image" src="images/twitter-icon.png"></a></h2>
-                <p>Whenever I start streaming or whenever I 5-0 a league on MTGO,
-                     I post it on my Twitter</p>
+                <a class="social-link" href="https://www.twitch.tv/bosseidonred" target="_blank">
+                    <img class="link-image" src="images/twitch-icon.png">
+                </a>
+                <a class="social-link" href="https://www.youtube.com/channel/UCyeMyVHflupyMPKDZoN6IIw" target="_blank">
+                    <img class="link-image" src="images/youtube-icon.png">
+                </a>
+                <a class="social-link" href="https://discord.gg/HMcGTjE" target="_blank">
+                    <img class="link-image" src="images/discord-icon.png"/>
+                </a>
+                <a class="social-link" href="https://twitter.com/BosseidonRed" target="_blank">
+                    <img class="link-image" src="images/twitter-icon.png">
+                </a>
             </div>
+        </div>
+
+        <!-- Footer -->
+        <div class="footer">
+            Page created by Bosseidon
         </div>
 
     <!-- Scripts -->
