--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <!-- Content -->
             <div class="content">
                 <h1 class="page-title">Home</h1>
-                <p>Welcome to the Great Revel. I'm Bosseidon, a dude that plays Magic: The Gathering. I'm particularly fond of the Modern format, with Burn being my deck of choice. I like it so much that I decided to create all of this content as an outlet for my thoughts about it.</p>
-                <p>I have a podcast, also entitled "The Great Revel", which is uploaded to my Youtube channel. I know Youtube is not the best place to have it on, but setting it up with other services ain't free, and pretty cardboard costs money. I also stream semi-regularly on Twitch, which really means like once or twice a week depending if I'm too busy with work and/or college.</p>
+                <p>Welcome to the Great Revel. I'm Bosseidon, a dude that plays Magic: The Gathering. I'm particularly fond of the Modern format, with Burn being my deck of choice. I like it so much that I decided to create this page to publish content about said deck.</p>
                 <p>There's also a Discord for Red based aggro decks, with channels for every format, which I'm a part of, and am quite active there. Feel free to join if these strategies interest you, or if you have any questions you want answering.</p>
+                <p>I typically stream on Twitch on saturdays, around 9 a.m. UK time. I try my best to do it every week, but because life can be hard to predict sometimes, I announce streams on fridays on the Discord, and on Twitter if that's your jam.</p>
 
                 <a class="social-link" href="https://www.twitch.tv/bosseidonred" target="_blank">
                     <img class="link-image" src="images/twitch-icon.png">
