finished copying sb guide from patreon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <!-- Title header -->
-        <header class="title">The Great Revel</header>
+        <header class="title">
+            The Great Revel
+            <button onclick="toggleDarkMode()" class="toggle-dark-mode-button">Toggle dark mode</button>
+        </header>
 
         <!-- Rest of the page -->
         <div class="not-header">
@@ -42,10 +45,11 @@
 
         <!-- Footer -->
         <div class="footer">
-            Page created by Bosseidon
+            <p>Page created by Bosseidon</p>
         </div>
 
     <!-- Scripts -->
     <script src="scripts/nav-links.js"></script>
+    <script src="scripts/dark-mode.js"></script>
     </body>
 </html>
