expanded more on why helix is a cut in the titan matchup

--- a/sideboard-guide.html
+++ b/sideboard-guide.html
@@ -585,7 +585,7 @@
                 <p><b>Outs:</b></p>
                 <ul>
                     <li>Eidolon of the Great Revel: it's a fine card to play early on, but if your angle of success is consistency, then you really don't want a card that can quickly become a dead draw.</li>
-                    <li>Lightning Helix: they do sometimes win by inches, but it doesn't happen often enough to justify keeping this in.</li>
+                    <li>Lightning Helix: they do sometimes win by inches, but it doesn't happen often enough to justify keeping this in over some other strong cards in the matchup.</li>
                 </ul>
                 <p><b>Ins:</b></p>
                 <ul>
