--- a/sideboard-guide.html
+++ b/sideboard-guide.html
@@ -594,6 +594,23 @@
                     <li>Smash to Smithereens: thanks to Urza's Saga, they now play 8 copies of Amulet, and this hate piece not only becomes much more important to have, but also much more consistent in dealing damage.</li>
                 </ul>
 
+                <h2>4c Yorion</h2>
+                <p>
+                    <b>Strategy:</b>
+                    This deck hinges on controlling the board with the MH2 evoke elementals and other strong pieces like Prismatic Ending, and then essentially the best multicolor spells in the entire format (Teferi, Time Raveler and Wrenn and Six are the most prevalent ones). The only card we really care about from their side is Omnath, Locus of Creation. Very hard to beat once it's down in game 1, and even in games 2 and 3 it can be quite hard to close if they stick it. Luckily, at 4 mana and having pretty much no interaction against Burn spells, we are favoured to win before then, which is usually enough. Don't bother killing planeswalkers, Teferi can be annoying, but aside from that, they don't really do us any harm.
+                </p>
+                <p><b>Outs:</b></p>
+                <ul>
+                    <li>Eidolon of the Great Revel: too easy to get remove, and with evoke elementals on the other side, it's just too much of a liability.</li>
+                    <li>Lightning Helix: you have to race, and your lifetotal isn't at risk soon enough.</li>
+                    
+                </ul>
+                <p><b>Ins:</b></p>
+                <ul>
+                    <li>Path to Exile: the cleanest out to Omnath. It's not a slam dunk, they have more copies of Omnath, and a timely Ephemerate screws us big time. Still, do it when they tap out for Omnath, and you'll likely win off of that, even through interaction and on the draw.</li>
+                    <li>Roiling Vortex: really good at keeping Omnath in check, as well as being able to win the game if it starts dragging.</li>
+                </ul>
+
                 <!--
                     <span class="card-name">
                             <a>
