fixed yorioon matchup

--- a/sideboard-guide.html
+++ b/sideboard-guide.html
@@ -601,6 +601,7 @@
                 </p>
                 <p><b>Outs:</b></p>
                 <ul>
+                    <li>Searing Blaze: not really amazing against them, seeing as how they aren't casting creatures early on, and the most important one doesn't die to this.</li>
                     <li>Eidolon of the Great Revel: too easy to get remove, and with evoke elementals on the other side, it's just too much of a liability.</li>
                     <li>Lightning Helix: you have to race, and your lifetotal isn't at risk soon enough.</li>
                     
@@ -609,6 +610,7 @@
                 <ul>
                     <li>Path to Exile: the cleanest out to Omnath. It's not a slam dunk, they have more copies of Omnath, and a timely Ephemerate screws us big time. Still, do it when they tap out for Omnath, and you'll likely win off of that, even through interaction and on the draw.</li>
                     <li>Roiling Vortex: really good at keeping Omnath in check, as well as being able to win the game if it starts dragging.</li>
+                    <li>Skullcrack: additional ways to stop Omnath from being a slam dunk are never bad.</li>
                 </ul>
 
                 <!--
