added wear tear

--- a/sideboard-guide.html
+++ b/sideboard-guide.html
@@ -361,15 +361,28 @@
                 <h3>Artifact/Enchantment hate package</h3>
                 <p>You can't really Bolt most of these, and some of them are a real beating. That means that you need answers for them, even if they end up diverging from your plan A. There's a bunch of options, but here I'll limit myself to the ones I find worthy of including, which follow:</p>
                 <ul>
-                    <span class="card-name">
-                        <a>
-                            Smash to Smithereens
-                        </a>
-                    </span>
-                    <span class="card-image-span">
-                        <img class="card-image" src="mtg-images/smash-to-smithereens.jpg"/>
-                    </span>
-                    if you aren't worried about any Enchantments (which you should rarely be), there's nothing better than this. It's simply a Bolt attached to a Shatter, can't get more efficient than that. It is a bit narrow, so it might range from awkward to downright wrong to bring in, but in the matchups where you really need it, it just shines.
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Smash to Smithereens
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/smash-to-smithereens.jpg"/>
+                        </span>
+                        if you aren't worried about any Enchantments (which you should rarely be), there's nothing better than this. It's simply a Bolt attached to a Shatter, can't get more efficient than that. It is a bit narrow, so it might range from awkward to downright wrong to bring in, but in the matchups where you really need it, it just shines.
+                    </li>
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Wear//Tear
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/wear-tear.jpg"/>
+                        </span>
+                        the need for this option comes from two things. First is opponents playing Leyline of Sanctity, which, as much as I'd like to berate, I can't because it is a good meta call for some decks. Second is Urza's Saga being popular. In both these situations, spending 1 mana to destroy a key piece of theirs is really strong. And against the Urza's Saga decks, the Tear side is a nice safety valve to have in the same card, and will often be correct to use on Shadowspear. This is one of those cards I don't love running, but when it is needed, I'd rather do it than lose games.
+                    </li>
                 </ul>
 
                 <h3>ETB hate package</h3>
@@ -483,6 +496,7 @@
                 <p><b>Ins:</b></p>
                 <ul>
                     <li>Roiling Vortex: they do have ways to stop it from sticking (Brazen Borrower and Force of Negation), but it's just too much of a slam dunk when it lands. Represents at least 6 damage, and for 2 mana, that's just too good to pass.</li>
+                    <li>Wear//Tear: they sometimes run Leyline of Sanctity, so bring this in if you see those. It sucks to need it, but it is what it is.</li>
                 </ul>
 
                 <h2>RBx Lurrus Midrange</h2>
@@ -518,6 +532,7 @@
                 <ul>
                     <li>Deflecting Palm: they pretty much can't beat you if you have this up, and I'd even suggest you mulligan for it if your hand isn't amazing.</li>
                     <li>Smash to Smithereens: obviously a great card in the matchup, but avoid using it just because. Save it for key targets, such as a lethal Hammer, a stabilizing Shadowspear, or as a lethal Bolt from your side.</li>
+                    <li>Wear//Tear: similar to Smash to Smitherees, the ability to disrupt essentially any of their game pieces is great. Avoid using it on Urza's saga just because, but it is a valid line to kill it before it starts birthing tokens and Shadowspears.</li>
                     <li>Skullcrack: stopping a Shadowspear hit can be game winning, but you're still in a position where you want to race, hence Skullcrack being the only anti-lifegain card you should attempt to run.</li>
                     <li>Path to Exile: as I've said before, you don't want to sit in the control role for this matchup, but Path is a big safety valve to have available while you try to kill them.</li>
                 </ul>
@@ -584,14 +599,16 @@
                 </p>
                 <p><b>Outs:</b></p>
                 <ul>
-                    <li>Eidolon of the Great Revel: it's a fine card to play early on, but if your angle of success is consistency, then you really don't want a card that can quickly become a dead draw.</li>
-                    <li>Lightning Helix: they do sometimes win by inches, but it doesn't happen often enough to justify keeping this in over some other strong cards in the matchup.</li>
+                    <li>Goblin Guide: it pains me to do it, but with Arboral Grazer and Dryad, Guide just gets bricked too easily.</li>
+                    <li>Lightning Helix (on the play): when you're going first, you want speed, and Helix is your worst card there.</li>
+                    <li>Eidolon of the Great Revel (on the draw): Just doesn't do enough when it comes down right before their potential Titan turn.</li>
                 </ul>
                 <p><b>Ins:</b></p>
                 <ul>
                     <li>Strict Proctor: this card can singlehandedly turn this matchup around, it's brutal. Stops all their relevant triggers and can sneak in for some damage often enough.</li>
                     <li>Path to Exile: the extra mana can be an issue, but this is a safety valve in case they found all 3 of their combo pieces. Hitting a Dryad or a Titan in key moments will give you an extra turn, and that should be enough for you to close out the game.</li>
                     <li>Smash to Smithereens: thanks to Urza's Saga, they now play 8 copies of Amulet, and this hate piece not only becomes much more important to have, but also much more consistent in dealing damage.</li>
+                    <li>Wear//Tear: can kill Dryad, Urza's Saga and Amulet. Target the correct piece, and you can win off of the disruption quite effectively.</li>
                 </ul>
 
                 <h2>4c Yorion</h2>
