added living end

--- a/sideboard-guide.html
+++ b/sideboard-guide.html
@@ -630,6 +630,22 @@
                     <li>Skullcrack: additional ways to stop Omnath from being a slam dunk are never bad.</li>
                 </ul>
 
+                <h2>Living End</h2>
+                <p>
+                    <b>Strategy:</b>
+                    this one can be rough, because they have enough disruption to put leave you out of gas (Grief + Force of Negation), and their clock is actually fast (they can frequently kill you with a single swing). However, they aren't super consistent, and some wins are just gonna come naturally. For this matchup, my sideboard suggestions are still somewhat experimental, so I want to reiterate that if you have suggestions, or just want to tell me I'm bad at Magic, hop on the Discord and we can chat.
+                    <p><b>Outs:</b></p>
+                    <ul>
+                        <li>Skullcrack: they are never really gaining life, so this is an easy cut.</li>
+                        <li>Searing Blaze: doesnt't really hit anything in a super relevant way, and the conditional aspect of it leaves it too open for disruption.</li>
+                    </ul>
+                    <p><b>Ins:</b></p>
+                    <ul>
+                        <li>Rest in Peace: if it lands, it's hard to imagine you lose the game. But their disruption package is really strong against it, and it will be an uphill battle to see this one hitting the board.</li>
+                        <li>Wear//Tear: these sickos play Leyline of Sanctity, so you are forced to bring this in. The one thing that might make it ok is that it hits some of their threats, and if that is ever enough to dodge lethal from a single swing, it's a win in my book.</li>
+                    </ul>
+                </p>
+
                 <!--
                     <span class="card-name">
                             <a>
