added intro to burn page, incomplete

--- a/page-structure.html
+++ b/page-structure.html
@@ -8,7 +8,10 @@
     </head>
     <body>
         <!-- Title header -->
-        <header class="title">The Great Revel</header>
+        <header class="title">
+            The Great Revel
+            <button onclick="toggleDarkMode()" class="toggle-dark-mode-button">Toggle dark mode</button>
+        </header>
 
         <!-- Rest of the Page -->
         <div class="not-header">
