--- a/intro-to-burn.html
+++ b/intro-to-burn.html
@@ -27,19 +27,69 @@
                 <h1 class="page-title">Intro to Burn</h1>
                 <p>If you're looking to get started with Burn in Modern, then this is the page for you! Hopefully, this is enough to get you started.</p>
 
-                <h2 class="subtitle">"Isn't Burn just an easy intro deck?"</h2>
-                <p>Short answer: no. One of the biggest misconceptions of this deck is that it's super easy to play, and that it's a good choice to lend to your friend that's new to the game. This simply isn't true. While Burn has quite a simple plan, a very linear one to boot, give it to someone that's still not sure about what the difference between Instants and Sorceries is, and they're guaranteed to have a bad time. Modern just isn't a format for beginners. It's a cutthroat one where mistakes are weighed in tons, and Burn is a deck that wins by grams. One wrong decision in the many that the deck presents will lose you games.</p>
-                <p>Having said that, general modern knowledge and a bit of understanding in what makes this deck tick goes a long way in making it a very quick pick up. Mastering it (something which I don't claim to have done) is another story, and requires you to be able to look at the game in a more mathematical way. But we'll talk about that some other time. This page will cover the basics, the "what makes the deck tick" I mentioned earlier.</p>
+                <h2 class="subtitle">"Isn't Burn just a cheap and easy intro deck?"</h2>
+                <p>Short answer: no. One of the biggest misconceptions of this deck is that it's super easy to play, and that it's a good choice to lend to a friend that's new to the game. That simply isn't true. While Burn has quite a simple plan, a very linear one to boot, give it to someone that's still not sure about what the difference between Instants and Sorceries is, and they're guaranteed to have a bad time. Modern just isn't a format for beginners. It's a cutthroat one where mistakes are measured in miles, and Burn is a deck that wins by inches. One wrong decision in the many that the deck presents will lose you games.</p>
+                <p>Having said that, general modern knowledge and a bit of understanding in what makes this deck tick goes a long way in making it a very quick pick up. Mastering it (something which I wouldn't even say I've done) is another story, and requires you to be able to look at the game in a more mathematical way. But we'll talk about that some other time. This page will cover the basics, the "what makes the deck tick" I mentioned earlier.</p>
 
                 <h2 class="subtitle">What is Burn all about?</h2>
                 <p>Burn is all about direct damage. The name "Burn" comes exactly from that effect, i.e., cards that can directly damage opponents. Effectively, variations of <span class="card-name"><a>Lightning Bolt</a></span>
-                <span class="card-image-span"><img class="card-image" src="mtg-images/lightning-bolt.jpg"/></span>. </p>
+                <span class="card-image-span"><img class="card-image" src="mtg-images/lightning-bolt.jpg"/></span>. Because there are enough cards that do this (as you'll see in the next section), you are able to build a deck that mostly comprises of cards that deal 3 damage for 1 mana. That means that you are looking to resolve 7 spells, each costing 1 mana, to win games. That averages a turn 4 kill, which on its own isn't super fast, but interacting directly with spells isn't something most decks can do, which means that that kill is going to inveitably happen unless your opponent can do something about it. We add to that that a lot of our spells deal damage to any target, meaning we can effectively stop most early threats without slowing down our own kill (you can still win by turn 4 even if you have to use some spells on the board). And as a nice plus, we still add to all that that modern has enough fetchlands to enable turn 3 wins (if our opponent takes 2 damage to their own lands, we now only need to resolve 6 spells to win). This is the basis of our deck. Inevitability in its win, stemming from a deck built by a critical mass of burn spells.</p>
+
+                <p>Unfortunately, we don't actually have ~40 copies of Lightning Bolt effects in the format, and as such, we need to play some other cards that still work towards our main goal. A key aspect of some of those cards is that they (can) deal 4 damage instead of 3. That effectively pushes the number of spells we have to resolve to win the game. If we get to cast 2 of those, we now only need to cast 6 spells to win the game. This is great. It means we need 1 less non land card drawn, which is great at combating one of Burn's biggest issues: drawing too many lands. Because of that, these cards represent card advantage for us. It can be weird to think about card advantage being something as simple as a card dealing 1 extra damage, but that's exactly what it is for us. Another form of card advantage for us, which typically isn't considered as such by other decks, are creatures,  since they can hit for more than 3 while they are alive. Of course, playing creatures leaves us vulnerable to removal, which will represent card disadvantage for us, and hence, it is a risk to do so (a necessary risk, that pays off most times).</p>
 
                 <h2 class="subtitle">What cards does Burn play?</h2>
-                <p>In this section I'm gonna go over the mainboard cards that Burn plays, at least the core, established ones. Alternative or more "avant-garde" will be covered somewhere else.</p>
+                <p>In this section I'm gonna go over the mainboard cards that Burn plays, at least the core, established ones. Alternative or more "avant-garde" ones will be covered some other time.</p>
 
                 <h3 class="subtitle">Fixed slots</h3>
                 <ul>
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Lightning Bolt:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/lightning-bolt.jpg"/>
+                        </span>
+                        the best card of the deck, and most likely one of the best cards every created, design-wise. As I've said before, our whole deck is built around effects like these, and this one costing 1 mana inconditionally and being an Instant, it's never going to be dethroned.
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Lava Spike:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/lava-spike.jpg"/>
+                        </span>
+                        it always costs 1 mana (which we will soon see it's not a given, sadly), but as a Sorcery that's only able to hit the opponent (or their planeswalkers, which can be relevant), it's really only playable in our deck. Having said that, we love it, and it's a shame we can only play 4 of these.
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Skewer the Critics:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/skewer-the-critics.jpg"/>
+                        </span>
+                        the first of our "conditional bolts", as they're commonly reffered as, which is also only really playable by us. Enabling spectacle on command is actually not something most decks can do, which makes this card a real liability. Us, though, we can do it pretty easily (it's our whole plan, really), and although there can be some awkwardness because of its condition, it'll be a proper 1 mana most times. The biggest downside of this card is that it is not a turn 1 play, and that can make some hands unkeepable.
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Rift Bolt:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/rift-bolt.jpg"/>
+                        </span>
+                        our other "conditional bolt", this one playable on turn 1, but much worse when draw later. It's biggest downside is being drawn when you need those 3 damage for 1 mana right then and there, but it's compensated by it being essentially inconditional in every other turn (it deals its damage before we resolve our 7th spell).
+                    </li>
+
                     <li>
                         <span class="card-name">
                             <a>
@@ -49,7 +99,91 @@
                         <span class="card-image-span">
                             <img class="card-image" src="mtg-images/goblin-guide.jpg"/>
                         </span>
-                        the best creature in our deck. Some people underestimate it because they read it and think it'll draw their opponents a ton of cards, including helping them curve out their mana. But that's not how the card works. Because Goblin Guide draws lands on reveal, a land which they would've drawn either way, it actually helps your opponents find non-land spells. That means that, barring a deck with an unusually high number of lands, it will just give you info about your opponents hand around 66% percent of the time. That's a pretty good deal, when you add to it that Burn results in fast games, where 1 or 2 extra cards are unlikely to affect the game. Because of this, I don't read Goblin Guide as a liability, but as a strength. I don't think that I then have to explain why a hasty 2/2 for R is a good card to be playing, but I will anyway. It comes out swinging, and 2 damage per turn add up quick. It puts us in a position where our opponents need to answer it soon, or we just get too much damage for that one Red mana and become veeeery unlikely to lose.
+                        the best creature in our deck. Some people underestimate it because they read it and think it'll draw their opponents a ton of cards, including helping them curve out their mana. But that's not how the card works. Because Goblin Guide draws lands on reveal, a land which they would've drawn either way, it actually helps your opponents find non-land spells. That means that, barring a deck with an unusually high number of lands, it will just give you info about your opponents hand around 66% percent of the time. That's a pretty good deal, when you add to it that Burn results in fast games, where 1 or 2 extra cards are unlikely to affect the game. Because of this, I don't read Goblin Guide as a liability, but as a strength. I don't think that I then have to explain why a hasty 2/2 for R is a good card to be playing, but I will anyway. Having haste is very important, since we REALLY want our cards to deal damage the turn we play them, but the most important part of it is that it deals damage in multiples of 2. Hitting twice, which isn't a lot given it costs 1 mana and can come down turn 1, will immediately represent card advantage.
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Monastery Swiftspear:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/monastery-swiftspear.jpg"/>
+                        </span>
+                        our other hasty 1 drop, this one is slightly worse. Prowess triggers from most of our deck, so it's going to be hitting for at least 2 every turn past the first one, and it doesn't have that risky effect of drawing cards for our opponent, but it often only starts representing card advantage on its third hit, which is a big downgrade from Goblin Guide's second hit. Still, it will easily be 3 damage for 1 mana, and at 2 toughness that can grow and attack throug a lot of boards, it's a strong card.
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Boros Charm:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/lightning-bolt.jpg"/>
+                        </span>
+                        pretty much the whole reason we play the White alongside the Red. It dealing 4 damage is the cleanest form of card advantage we could ask for, and add to that it's an Instant and other modes (which you should always keep in mind, they are actually relevant from time to time).
+                    </li>
+                </ul>
+
+                <p>This is the list of cards I consider "fixed slots". There are other cards that people will commonly consider fixed, but they are all cards that can be made useless by meta shifts. These are the "flexible slots", which simply means that they are cards that are played to attack the current meta</p>
+
+                <h3 class="subtitle">Flexible slots</h3>
+                <ul>
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Eidolon of the Great Revel:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/eidolon-of-the-great-revel.jpg"/>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Searing Blaze:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/searing-blaze.jpg"/>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Skullcrack:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/skullcrack.jpg"/>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Lightning Helix:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/lightning-helix.jpg"/>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Flame Rift:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/flame-rift.jpg"/>
+                        </span>
                     </li>
                 </ul>
 
