changed stream info

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1 class="page-title">Home</h1>
                 <p>Welcome to the Great Revel. I'm Bosseidon, a dude that plays Magic: The Gathering. I'm particularly fond of the Modern format, with Burn being my deck of choice. I like it so much that I decided to create this page to publish content about said deck.</p>
                 <p>There's also a Discord for Red based aggro decks, with channels for every format, which I'm a part of, and am quite active there. Feel free to join if these strategies interest you, or if you have any questions you want answering.</p>
-                <p>I typically stream on Twitch on saturdays, around 9 a.m. UK time. I try my best to do it every week, but because life can be hard to predict sometimes, I announce streams on fridays on the Discord, and on Twitter if that's your jam.</p>
+                <p>Streams are currently on hold while I figure some stuff out, so the Twitch is lookin a little shrivelled, but feel free to follow me there so you can know exactly when I come back in action.</p>
 
                 <a class="social-link" href="https://www.twitch.tv/bosseidonred" target="_blank">
                     <img class="link-image" src="images/twitch-icon.png">
