--- a/intro-to-burn.html
+++ b/intro-to-burn.html
@@ -201,6 +201,82 @@
                     </li>
                 </ul>
 
+                <h3 class="subtitle">Mana Base:</h3>
+                <p>Finally, the lands. We play a varied mana base, where some key lands are very important for the deck's success. The most important thing is: ALL OUR LANDS NEED TO TAP FOR RED. It's easy to think a single non red land is fine, but what you're doing is you're effectively lowering the land count. Barely any of your spells don't cost R, and we have enough spells that cost RR.</p>
+                <ul>
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Mountain:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/mountain.jpg"/>
+                        </span>
+                        gotta have baics, and as I said earlier, all of ours need to tap for R.
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Inspiring Vantage:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/inspiring-vantage.jpg"/>
+                        </span>
+                        our first 3 turns are the most important ones, and the 4th one is often not needed (as we can already double spell on 3 mana). So this land as very little downside, while it fixes our mana for no life cost.
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Sunbaked Canyon:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/sunbaked-canyon.jpg"/>
+                        </span>
+                        paying 1 life each time you tap this is no small cost, specially with cards like Eidolon and Flame Rift in the mix. However, the upside is just too strong. A big weakness of ours is flooding out, and these lands are effectively cantrips unless drawn early. That is very powerful, and reducing the amount of lands that actually count towards flooding was a big step in keeping Burn a strong deck.
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Sacred Foundry:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/sacred-foundry.jpg"/>
+                        </span>
+                        the classic fetchable land that mixes our main color and our splash color. Not much else to say about it.
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Fetchlands:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/arid-mesa.jpg"/>
+                        </span>
+                        any one of these that fetches Mountains work, as our entire fetchable mana should be Mountains.
+                    </li>
+
+                    <li>
+                        <span class="card-name">
+                            <a>
+                                Fiery Islet:
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/fiery-islet.jpg"/>
+                        </span>
+                        horizon lands are so good that 4 aren't enough, and including more is typically worth it, even if these ones only tap for R in our deck.  
+                    </li>
+                </ul>
+
                 <h2 class="subtitle">General Tips</h2>
                 <p>To close out this page, I'll be going over some tips to help you get started with the deck.</p>
 
