fix bcharm image

--- a/intro-to-burn.html
+++ b/intro-to-burn.html
@@ -128,7 +128,7 @@
                             </a>
                         </span>
                         <span class="card-image-span">
-                            <img class="card-image" src="mtg-images/lightning-bolt.jpg"/>
+                            <img class="card-image" src="mtg-images/boros-charm.jpg"/>
                         </span>
                         pretty much the whole reason we play the White alongside the Red. It dealing 4 damage is the cleanest form of card advantage we could ask for, and being an Instant just makes it too good. Its other modes can also be relevant, with the double strike having numerous combat trick applications, and the indestructible mode can really punish decks that don't play much removal and are trying to clear the board to survive. 
                     </li>
