002 fixed template, added page to nav

--- a/current-decklist.html
+++ b/current-decklist.html
@@ -24,6 +24,9 @@
 
             <!-- Content -->
             <div class="content">
+                <h1 class="page-title">Current Decklist</h1>
+
+                <p>I'm making this page to showcase the current list I'm playing around with. In my opinion, the Burn lists that you see online quickly become outdated.</p>
 
             </div>
         </div>
