002 finished current decklist page

--- a/current-decklist.html
+++ b/current-decklist.html
@@ -26,10 +26,105 @@
             <div class="content">
                 <h1 class="page-title">Current Decklist</h1>
 
-                <p>I'm making this page to showcase the current list I'm playing around with. In my opinion, the Burn lists that you see online quickly become outdated.</p>
+                <p>I'm usually not a fan of the Burn lists that place in events, since most of them are carbon copies of previous lists, and that results in Burn being a deck that commonly takes a long ass time to adapt to the meta. Because of that, I prefer adapting my list more proactively to what goes on in modern. As such, I'm making this page to showcase what I'm playing around with. At least the list I think is best set to perform in the current meta, whatever that may be.</p>
 
+                <p>So, here is my current list (courtesy of <a href="https://aetherhub.com/" target="_blank" class="social-link">aetherhub</a>):</p>
+                <iframe 
+                    src="https://aetherhub.com/Deck/Embedded/modern-burn-500626" 
+                    width="400"
+                    height="700"
+                    frameborder="0">
+                </iframe>
+
+                <p>There are some notable differences from what would be considered the "stock" burn list, and I want to address those choices so that you don't think I'm just randomly removing cards from the deck for attention.</p>
+
+				<p>
+					No 
+					<span class="card-name">
+						<a>
+							Eidolon of the Great Revel:
+						</a>
+					</span>
+					<span class="card-image-span">
+						<img class="card-image" src="mtg-images/eidolon-of-the-great-revel.jpg"/>
+					</span>
+					I've been very vocal about cutting Eidolon over at the Burn Discord, but I'll try to quickly summarise this choice. There are three aspects of the current meta that make the card into a poor choice for Burn. The density of removal cards has substantially gone up. With decks having to deal with Ragavan and other busted cheap threats, Eidolon is faced with removal much more often. "Dies to removal" isn't a valid argument not to run a card, but to us this isn't that. It's "our card dealt 2 damage, and can push the number of spells we need to resolve by 1". It completely goes against our whole motto, so it absolutely is an argument in our very specific case (where we measure card quality by how much damage they are guaranteed to do, not by how much damage they could do if Jeffrey Bezos signed off on it). Adding to this, there are some very popular cards (Fury, Solitude, Boseiju, Prismatic Ending, and March of the Otherwordly Light) that can effectively deal with Eidolon without triggering any damage. That means the average damage Eidolon is doing is even less than the already crippling 2. And the cherry on top of this shit sunday is that because of the two previous reasons, the only creature focused decks just go too wide for us to realistically control the board and use said Eidolon to deal damage on the ground (which is a key aspect of Eidolon being as good as he has been in the past). For those reasons, I'm off of Eidolon, trying out spells that for sure deal damage in its now vacant slot.
+				</p>
+
+				<p>
+					4x
+					<span class="card-name">
+						<a>
+							Skullcrack:
+						</a>
+					</span>
+					<span class="card-image-span">
+						<img class="card-image" src="mtg-images/skullcrack.jpg"/>
+					</span>
+					Urza's Saga is a very strong card, and although only Hammer plays it out of the top tier decks, a whole bunch of tier 2 decks were made viable thanks to it. And all of them play Shadowspear, because of course they do, the inclusion cost is negligible. There's also the nice upside of being able to negate an Omnath trigger, even if that matchup is pretty favourable regardless of number of Skullcrack. As such, I consider Skullcrack to be the most important flex slot right now. Well, as important as Searing Blaze, which is always insanely useful. But Skullcrack has the advantage of not being awkward in multiples, hence why I'm playing 4 right now.
+				</p>
+
+				<p>
+					3x
+					<span class="card-name">
+						<a>
+							Searing Blaze:
+						</a>
+					</span>
+					<span class="card-image-span">
+						<img class="card-image" src="mtg-images/searing-blaze.jpg"/>
+					</span>
+					this card is insanely useful, and the current meta has enough creatures that it always has a legal target. I say legal target because even though there are a bunch of creatures you can kill with it, that doesn't mean there are a lot of creatures you want to kill with it. And when you aren't killing a target you REALLY need to kill, Searing Blaze isn't card advantage. It's just a Lightning Strike with extra steps. The card also gets super awkward in multiples, because triggering landfall on command isn't something we get to do more than once per game.
+				</p>
+
+				<p>
+					4x
+					<span class="card-name">
+						<a>
+							Fiery Islet:
+						</a>
+					</span>
+					<span class="card-image-span">
+						<img class="card-image" src="mtg-images/fiery-islet.jpg"/>
+					</span>
+					horizon (or canopy) lands are the perfect fit for Burn. They make 4 land hands keepable and make flooding less of an issue. Without Eidolon, there's (maybe) space to play all the Red ones instead of only Sunbaked Canyon. This is just a test right now, if you want to keep it reasonable I'd advise to play 2 instead of 4. But I'm testing this configuration because I want to know just how good these when there aren't any Eidolon stressing your lifetotal.
+				</p>
+
+				<p>
+					4x
+					<span class="card-name">
+						<a>
+							Lightning Helix:
+						</a>
+					</span>
+					<span class="card-image-span">
+						<img class="card-image" src="mtg-images/lightning-helix.jpg"/>
+					</span>
+					when I first dropped Eidolon I realized that being healthy was a key aspect of Burn. You want to be healthier than your opponent so that they can't just put on the aggressor pants themselves and push you into a corner. Hence, Helix is a key part of the deck, and even though I'd drop it real fast if Chain Lightning ever became legal, it is currenly a very important slot so that I can push the canopy land count up.
+				</p>
+
+				<p>
+					1x
+					<span class="card-name">
+						<a>
+							Flame Rift:
+						</a>
+					</span>
+					<span class="card-image-span">
+						<img class="card-image" src="mtg-images/flame-rift.jpg"/>
+					</span>
+					a great top up for the deck, as a 5th Boros Charm. With the 4 Helix there's also a good chance this spell doesn't push the game into a draw, and dealing 4 damage with a spell instead of 3 is enough of a big deal to make it worth it.
+				</p>
+
+				<p>I'm not planning to go over the sideboard choices, since they are pretty well covered in this page's sideboard guide, but if I see the need for it or if enough people ask me about them, I'll just add it here.</p>
             </div>
         </div>
+
+        <!-- Footer -->
+        <div class="footer">
+            <p>Page created by Bosseidon</p>
+        </div>
+
     <script src="scripts/nav-links.js"></script>
     <script src="scripts/dark-mode.js"></script>
     <script src="scripts/decklist-card-viewer.js"></script>
