--- a/intro-to-burn.html
+++ b/intro-to-burn.html
@@ -294,8 +294,13 @@
 
             </div>
         </div>
+
+        <!-- Footer -->
+        <div class="footer">
+            <p>Page created by Bosseidon</p>
+        </div>
+
     <script src="scripts/nav-links.js"></script>
     <script src="scripts/dark-mode.js"></script>
-    <script src="scripts/decklist-card-viewer.js"></script>
     </body>
 </html>
