fixed manabase in sb guide

--- a/sideboard-guide.html
+++ b/sideboard-guide.html
@@ -166,21 +166,11 @@
                     <li class="subtitle">
                         <span class="card-name">
                             <a>
-                                2x Mountain
+                                3x Mountain
                             </a>
                         </span>
                         <span class="card-image-span">
                             <img class="card-image" src="mtg-images/mountain.jpg"/>
-                        </span>
-                    </li>
-                    <li class="subtitle">
-                        <span class="card-name">
-                            <a>
-                                1x Sokenzan, Crucible of Defiance
-                            </a>
-                        </span>
-                        <span class="card-image-span">
-                            <img class="card-image" src="mtg-images/sokenzan-crucible-of-defiance.jpg"/>
                         </span>
                     </li>
                     <li class="subtitle">
@@ -201,6 +191,16 @@
                         </span>
                         <span class="card-image-span">
                             <img class="card-image" src="mtg-images/sunbaked-canyon.jpg"/>
+                        </span>
+                    </li>
+                    <li class="subtitle">
+                        <span class="card-name">
+                            <a>
+                                4x Fiery Islet
+                            </a>
+                        </span>
+                        <span class="card-image-span">
+                            <img class="card-image" src="mtg-images/fiery-islet.jpg"/>
                         </span>
                     </li>
                     <li class="subtitle">
