fixed archon side

--- a/sideboard-guide.html
+++ b/sideboard-guide.html
@@ -648,11 +648,12 @@
                     this should be a favourable matchup, as they are quite slow at closing it out, but also don't have good board control for the early game. Having said that, they do have some creatures that can block some attacks, and since their combo relies on Archon of Cruelty, we do lose the game if they go off. If they are executing their combo with an artifact and Indomitable Creativity, then there isn't much to do other than race them (very achievable as it's a turn 4 combo that kinda only gains 3 life on the turn it happens). If, however, they are trying to combo with Transmogrify, you can respond by killing the creature they are targeting, and the spell fizzles. The one line that can quickly screw us is them using Persist and some discard outlet to get Archon down on turn 3, which is just fast enough that we'll have a hard time racing it if we were on the draw. Skullcrack is going to be your strongest spell in this matchup, because hitting the 1st Archon trigger is going to be enough to close it out in most circumstances.
                     <p><b>Outs:</b></p>
                     <ul>
-                        <li>Ligtning Helix: they are never really gaining life, so this is an easy cut.</li>
+                        <li>Ligtning Helix: they aren't really threatening our lifetotal, so this is an easy cut.</li>
                         <li>Eidolon of the Great Revel (on the draw): the card is good on the play, but on the draw, it's likely it's only dealing 2 damage. That's going to lose you games, so it's best to cut it.</li>
                     </ul>
                     <p><b>Ins:</b></p>
                     <ul>
+                        <li>Skullcrack: if they do manage to slam Archon before you get to finish them off, this card ensures they are still well within reach when you untap.</li>
                         <li>Path to Exile: a safety valve, in case they get Archon down and you don't have lethal on the following turn.</li>
                         <li>Roiling Vortex: another safety valve, this one worse because of the investment it requires + not really solving the clock that is a revived Archon. Having said that, denying the ETB and the first attack trigger buys you enough time to dig for lethal before their second attack kills you.</li>
                     </ul>
